plugins {
    id 'java-library'
}

group 'de.hhu.bsinfo'
version = getProperty('projectVersion')

compileJava {
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.foreign'])
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(19))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':core')
    implementation files("core-${infinileapVersion}.jar")
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
}

test {
    useJUnitPlatform()
}
